@@ -4,6 +4,7 @@
 	* Fixed crashes when attacking long worms on flipped levels
 	* HTML dump: output IBMgraphics and DECgraphics characters
 	* HTML dump: fix crash if monster name is too long
+	* Multiple bones files per level (not on Win32)
 
 	* patches:
 	  - DYWYPISI? (by Jafet)
